@@ -162,7 +162,7 @@ void SD_create_environment(const char *platform_file)
   parse_platform_file(platform_file);
 
   /* now let's create the SD wrappers for workstations and links */
-  xbt_dict_foreach(workstation_set, cursor, name, surf_workstation) {
+  xbt_dict_foreach(surf_model_resource_set(surf_workstation_model), cursor, name, surf_workstation) {
     __SD_workstation_create(surf_workstation, NULL);
   }
 
