@@ -49,7 +49,7 @@ void SIMIX_create_environment(const char *file)
   end = xbt_os_time();
   DEBUG1("PARSE TIME: %lg", (end - start));
 
-  xbt_dict_foreach(workstation_set, cursor, name, workstation) {
+  xbt_dict_foreach(surf_model_resource_set(surf_workstation_model), cursor, name, workstation) {
 	  __SIMIX_host_create(name, workstation, NULL);
   }
 
