@@ -5,6 +5,7 @@
  * under the terms of the license (GNU LGPL) which comes with this package. */
 
 #include "surf_private.h"
+#include "xbt/dict.h"
 
 static void void_die_impossible_paction(surf_action_t action) {
 	DIE_IMPOSSIBLE;
@@ -28,11 +29,16 @@ void surf_model_init(surf_model_t model) {
 	    xbt_swag_new(xbt_swag_offset(action, state_hookup));
 	  model->common_public.states.done_action_set =
 	    xbt_swag_new(xbt_swag_offset(action, state_hookup));
+	  model->common_public.resource_set = xbt_dict_new();
 
 	  model->common_public.action_free = int_die_impossible_paction;
 	  model->common_public.action_cancel = void_die_impossible_paction;
 	  model->common_public.action_recycle = void_die_impossible_paction;
 
+}
+
+void* surf_model_resource_by_name(void* model, const char *name) {
+	return xbt_dict_get_or_null(((surf_model_t)model)->common_public.resource_set,name);
 }
 
 
@@ -42,5 +48,6 @@ void surf_model_exit(surf_model_t model) {
 	  xbt_swag_free(model->common_public.states.running_action_set);
 	  xbt_swag_free(model->common_public.states.failed_action_set);
 	  xbt_swag_free(model->common_public.states.done_action_set);
+	  xbt_dict_free(&model->common_public.resource_set);
 	  free(model->common_private);
 }
